Change: made the ROM saving not modal and added a system for disabling and re-enabling all inputs so that the console and documentation will stay interactable and the script can be read while saving

--- a/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
+++ b/src/com/dabomstew/pkrandom/newgui/NewRandomizerGUI.form
@@ -9,7 +9,7 @@
       <font/>
     </border>
     <children>
-      <grid id="73235" layout-manager="GridBagLayout">
+      <grid id="73235" binding="generalOptionsPanel" layout-manager="GridBagLayout">
         <constraints>
           <grid row="1" column="2" row-span="3" col-span="1" vsize-policy="3" hsize-policy="3" anchor="9" fill="0" indent="0" use-parent-layout="false"/>
           <gridbag weightx="0.0" weighty="0.0"/>
